# Cliente-de-Email

./: correioEletronico.cpp  testeVmime.cpp
teste_GUI/: CMakeLists.txt  EnviadorEmail.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
